--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-# Logs
-logs
-*.log
-
-# Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
-
-# Dependency directory
-# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+dist
+.tmp
+.sass-cache
+bower_components
+test/bower_components
