--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
     "modernizr": "~2.8.1",
-    "font-awesome": "^4.5.0"
+    "font-awesome": "^4.5.0",
+    "typedjs-bower": "^1.1.2"
   },
   "overrides": {
     "bootstrap-sass": {
