--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "bootstrap-sass": "~3.3.5",
     "modernizr": "~2.8.1",
     "font-awesome": "^4.5.0",
-    "typedjs-bower": "^1.1.2"
+    "typed.js": "^1.1.1"
   },
   "overrides": {
     "bootstrap-sass": {
