--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "modernizr": "~2.8.1",
     "font-awesome": "^4.5.0",
     "typed.js": "^1.1.1",
-    "devicon": "*"
+    "devicon": "*",
+    "hover": "Hover#^2.0.2"
   },
   "overrides": {
     "bootstrap-sass": {
