--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "private": true,
   "devDependencies": {
-
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^2.0.1",
+    "eslint": "^5.10.0",
+    "eslint-loader": "^2.1.1",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.27.1"
   },
   "eslintConfig": {
     "env": {
@@ -15,5 +24,8 @@
         "single"
       ]
     }
+  },
+  "dependencies": {
+    "typed.js": "^2.0.9"
   }
 }
