--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
-  "private": true,
+  "name": "portfolio",
+  "version": "",
+  "dependencies": {
+    "normalize.css": "^8.0.1",
+    "typed.js": "^2.0.9"
+  },
+  "scripts": {
+    "start": "webpack-dev-server"
+  },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
@@ -7,10 +15,14 @@
     "css-loader": "^2.0.1",
     "eslint": "^5.10.0",
     "eslint-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.27.1"
+    "url-loader": "^1.1.2",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "eslintConfig": {
     "env": {
@@ -24,8 +36,5 @@
         "single"
       ]
     }
-  },
-  "dependencies": {
-    "typed.js": "^2.0.9"
   }
 }
