--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js --mode development",
-    "build": "webpack --config webpack.prod.js --mode production",
-    "preview": "npm run build && http-server dist"
+    "build": "webpack --config webpack.prod.js --mode production && touch docs/CNAME && echo 'marekdano.com' > docs/CNAME",
+    "preview": "npm run build && http-server docs"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
