--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js --mode development",
-    "build": "webpack --config webpack.prod.js --mode production && touch docs/CNAME && echo 'marekdano.com' > docs/CNAME",
+    "build": "webpack --config webpack.prod.js --mode production",
     "preview": "npm run build && http-server docs"
   },
   "devDependencies": {
